--- a/Controller/package.json
+++ b/Controller/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts",
+    "dev": "nodemon src/routes/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -12,6 +12,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
     "express": "^4.21.0",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
