--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"postcss": "^8.4.45",
 		"tailwind-merge": "^2.5.2",
 		"tailwind-variants": "^0.2.1",
-		"tailwindcss": "^3.4.11"
+		"tailwindcss": "^3.4.11",
+		"wretch": "^2.10.0"
 	}
 }
